ckanext/ngds/ngdsui/public/css/default.css
/* ... */
/* End contribute node */


/* Upload page */

#info-tip-container {
	display:table;	
	float:left;
	margin-right:20px;
}

#info-tip-container .cell {
	display:table-cell;
	padding-right:5px;
}

.upload-info-tip {
	width:180px;
	line-height:1em;
}

.upload-info-tip p {
	font-family:Arial;
	font-weight:bold;
	font-size:12px;
	display:inline;
	text-align:justify;
}

.upload-container {
	width:670px;
	display:table;
	border-collapse:separate;
	text-align:center;
}

.upload-container div.title {
	display:table-cell;
	font-size:14px;
	font-family:Arial;
	font-weight:bold;
	width:100px;
	height:35px;
	padding-top:15px;
	padding-bottom:0px;
	background-color:#dadada;
}

/* End of Upload page */


/* These styles have to be re-examined for neccessity and appropriateness. */

.stages {
	width:699px;
	display:table;
	border-collapse:separate;
	text-align:center;
	padding-left:0px;
	margin-left:0px;
	margin-top:0px;
}

button.highlight {
	text-decoration: none;
	background: transparent;
	border: none;
	font-size: 14px;
	font-family: Arial;
	font-weight: bold;
	cursor: pointer;
}

section.module {
	width:750px;
	margin-left:250px;
	font-family:Arial;
	font-weight:bold;
	font-size:18px;
	min-height:550px;
}

div.module-content {
	width:700px;
}

.first, .middle, .last {
	display:table-cell;
	font-size:14px;
	font-family:Arial;
	font-weight:bold;
	width:100px;
	height:35px;
	padding-top:15px;
	padding-bottom:0px;
	background-color:#dadada;
}

.active {
	background-color:#8A8687;
}

.control-group, .form-actions {
	width:670px;
	/*margin-left:250px;*/
	text-align:right;
}

.form-actions {
	margin-top: 40px;
}

.control-group {
	margin-top:20px;
	position:relative;
}

.control-group input[type="text"], .control-group textarea {
	width:460px;
	margin-left:40px;
}

.control-group input {
	height:30px;
}

.control-group textarea {
	margin-top:10px;
}

.controls, .input-prepend {
	display:inline;
}

.controls {
	/*margin-right:20px;*/
}

.align-left {
	text-align:left;
}

label.control-label, span.add-on, div.form-actions a {
	font-size:16px;
	font-family:Arial;
	font-weight:normal;
	text-decoration:none;
}

label.control-label {
	position:absolute;
	left:60px;
	padding-top:10px;
	width:140px;
}

div.module-content form.dataset-form {
	border:1px solid #dadada;
	padding-bottom:10px;
}

div.controls select {
	width:200px;
	/* margin-left:210px; */
	margin-top:5px;
	margin-left:40px;
	height:25px;
}

div.controls div#bbox-map {
	width: 445px;
	height: 300px;
	border: 1px solid #CCC;
	margin-left: 170px;
	padding-right: 0px;
	padding-left: 0px;
}

/*label[for="field-extras-0-remove"], label[for="field-extras-0-key"], 
label[for="field-extras-0-key"], label[for="field-extras-0-value"], 
input#field-extras-0-key, input#field-extras-0-value {
	display:none;
}*/
/* Must be fixed soon */

.lang-select {
	margin-top:35px;
}

.select2-results {
	margin: 4px 4px 4px 0;
	padding: 0 0 0 4px;
	position: relative;
	overflow-x: hidden;
	overflow-y: auto;
	max-height: 200px;
}

.select2-results .select2-highlighted {
	background: #3875d7;
	color: #fff;
}

.select2-results li {
	list-style: none;
	display: list-item;
}

.select2-drop {
	background: #fff;
	color: #000;
	border: 1px solid #aaa;
	border-top: 0;
	position: absolute;
	top: 100%;
	-webkit-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
	-moz-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
	-o-box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
	box-shadow: 0 4px 5px rgba(0, 0, 0, .15);
	z-index: 9999;
	width: 100%;
	margin-top: -1px;
	-webkit-border-radius: 0 0 4px 4px;
	-moz-border-radius: 0 0 4px 4px;
	border-radius: 0 0 4px 4px;
}

.slug-preview { 
	margin-top:30px;
	text-align:left;
}

.slug-preview strong {
	font-weight:normal;
	width: 514px;
	text-align: left;
	margin-top: 28px;
	margin-left: 58px;
}

.slug-preview-prefix {
	margin-left:100px;
}

.select2-choices {

}

.select2-choices li {
	list-style: none;
}

.select2-container {
	display:inline;
	width:100px;
}

li.select2-search-field input{
	width:400px;
}

.input[type="file"] {
	width: auto;
	padding: initial;
	line-height: initial;
	background-color: #ffffff;
	background-color: initial;
	border: initial;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	height: 28px;
	line-height: 28px;
}

.resource-upload-field input {
	opacity: 0;
	filter: alpha(opacity=0);
	position: absolute;
	top: 0;
	right: 0;
	z-index: 1;
	margin: 0;
	border: solid transparent;
	border-width: 100px 0 0 200px;
	cursor: pointer;
	direction: ltr;
	-moz-transform: translate(-300px, 0) scale(4);
}

.resource-upload-field {
	position: relative;
	overflow: hidden;
	display: inline-block;
	vertical-align: bottom;
}


/* CKAN styles that need to be overriden for the autocomplete to look nice */

.select2-drop {
	
}



/* END CKAN STYLES THAT NEED TO BE OVERRIDEN*/ 


.ui-menu-item a {
	font-size:14px;
}

/*
	Extras styles
*/

div.controls select {
	width:464px;
}

div.controls select[id="field-extras-0-value"] {
	margin-left:0px;
}

.control-group {
	margin-left:0px;
}
/*
	End extras styles
*/

/* User Management */

div#manage-users table{
	font-family: Arial;
	font-size: 12px;
	margin: 5px;
	width: 750px;
	border-collapse: collapse;
	text-align: left;
}

div#manage-users th{
	font-size: 13px;
	font-weight: bold;
	padding: 4px 4px;
	background: #a8a8a8;
	border-bottom: 2px solid #a8a8a8;
}

div#manage-users td{
	border-bottom: 1px solid #ccc;
	color: #000000;
	padding: 6px 8px;
}

div#manage-users td,div#manage-users th{
	padding-top: 10px;
	padding-left: 5px;
	padding-bottom: 10px;
}

.ngds-button {
  display: block;
  width: 115px;
  height: 25px;
  background: #4E9CAF;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  color: white;
  font-weight: bold;
}

.resource-upload-field {
	margin-left:10px;
}



/* Login Page Styles - Need to be revised and removed*/

div#login-page {
	padding-top: 30px;
	height: 400px;
	display:table;
	background: #ffffff url("../../../base/images/nav.png") 0 0 repeat-y;
}
/* ... */

